# -Screenshot-Tool

./: .gitignore  CHANGELOG.md  HANDOFF.md  LICENSE  README.md  config.toml.example  install.sh  pyproject.toml
.github/workflows/: ci.yml
contrib/: ai.pngshot.ControlCenter.desktop  ai.pngshot.desktop  niri-pngshot.kdl  pngshot-tray.service  pngshot.service
pngshot/: __init__.py  __main__.py  capture.py  config.py  control_center.py  controller.py  diagnostics.py  fastctl.py  shortcuts.py  tray.py  tray_config.py
pngshot/longshot/: fixed_regions.py  highlight.py  recorder.py  stitcher.py
pngshot/overlay/: annotate.py  app.py  model.py  selector.py  surface.py  toolbar.py
pngshot/pin/: window.py
pngshot/services/: clipboard.py  llm.py  ocr.py  saver.py
pngshot/util/: imaging.py  niri.py  result_win.py  theme.py
scripts/: pngshot
tests/: test_core.py
